--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <article>
       <h2>The Basic Language of the Web: HTML</h2>
-
+      <p>abc</p>
       <img
         src="img/laura-jones.jpg"
         alt="Its Laura Jones"
