--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="style.css" rel="stylesheet" />
     <title>The Basic Language of the web: HTML</title>
   </head>
 
@@ -26,7 +27,7 @@
 
     <article>
       <h2>The Basic Language of the Web: HTML</h2>
-      <p>abc</p>
+
       <img
         src="img/laura-jones.jpg"
         alt="Its Laura Jones"
