--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h5>The Basic Language of the web: HTML</h5>
     <h6>The Basic Language of the web: HTML</h6>
     -->
-    <header>
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
@@ -26,23 +26,27 @@
     </header>
 
     <article>
-      <h2>The Basic Language of the Web: HTML</h2>
+      <header>
+        <h2>The Basic Language of the Web: HTML</h2>
 
-      <img
-        src="img/laura-jones.jpg"
-        alt="Its Laura Jones"
-        width="50"
-        height="50"
-      />
+        <img
+          src="img/laura-jones.jpg"
+          alt="Its Laura Jones"
+          width="50"
+          height="50"
+        />
 
-      <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
+        <p id="author">
+          Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
+        </p>
 
-      <img
-        src="img/post-img.jpg"
-        alt="HTML code on a screen"
-        width="500"
-        height="200"
-      />
+        <img
+          src="img/post-img.jpg"
+          alt="HTML code on a screen"
+          width="500"
+          height="200"
+        />
+      </header>
 
       <p>
         All modern <em>websites</em> and web <i>applications</i> are built using
@@ -106,7 +110,7 @@
     <aside>
       <h4>Related posts</h4>
       <ul>
-        <li>
+        <li class="related">
           <img
             src="img/related-1.jpg"
             alt="man with programing"
@@ -115,13 +119,13 @@
           />
           <a href="#">How to Learn Web Development</a>
         </li>
-        <p>By Jonas Schmedtmann</p>
-        <li>
+        <p class="related-author">By Jonas Schmedtmann</p>
+        <li class="related">
           <img src="img/related-2.jpg" alt="piorón" weight="75" height="75" />
           <a href="#">The Unkown Powers of CSS</a>
         </li>
-        <p>By Jim Dillon</p>
-        <li>
+        <p class="related-author">By Jim Dillon</p>
+        <li class="related">
           <img
             src="img/related-3.jpg"
             alt="screen Javascript code"
@@ -129,11 +133,13 @@
             height="75"
           />
           <a href="#">Why Java Script is Awsome</a>
-          <p>By Matilda</p>
+          <p class="related-author">By Matilda</p>
         </li>
       </ul>
     </aside>
 
-    <fotter>Copyright &copy; 2022 by ADDAM </fotter>
+    <footer>
+      <p id="copyright">Copyright &copy; 2022 by ADDAM</p>
+    </footer>
   </body>
 </html>
