--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
     </aside>
 
     <footer>
-      <p id="copyright">Copyright &copy; 2022 by ADDAM</p>
+      <p id="copyright" class="copyright text">
+        Copyright &copy; 2022 by ADDAM
+      </p>
     </footer>
   </body>
 </html>
